# ThreadfulIRC

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
.cache/clangd/index/: main.cpp.33EFDA361DD031E0.idx
src/: main.cxx
src/include/: malloc.hxx
